Deployments/legacy/suex-enginfprojects-test/k8s-manifests/deploy-celery-scheduler.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enginfprojects-celery-scheduler
  namespace: suex-enginfprojects-test
  labels:
    app.kubernetes.io/name: enginfprojects-celery-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: enginfprojects-celery-scheduler
  template:
    metadata:
      labels:
        app.kubernetes.io/name: enginfprojects-celery-scheduler
    spec:
      containers:
        - name: mpsproject
          image: quay.io/ds283/mpsproject:2023.2.15
          imagePullPolicy: Always
          command: ["./launch_beat.sh"]
          resources:
            limits:
              cpu: 100m
              memory: 512Mi
            requests:
              cpu: 25m
              memory: 384Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
          volumeMounts:
            - name: instance-config
              mountPath: /mpsproject/app/instance/local.py
              subPath: local.py
            - name: instance-config
              mountPath: /mpsproject/app/initdb/initdb.py
              subPath: initdb.py
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: instance-config
          configMap:
            name: enginfprojects-instance
      restartPolicy: Always
