Deployments/legacy/suex-enginfprojects-test/k8s-manifests/service-app.yml
apiVersion: v1
kind: Service
metadata:
  name: enginfprojects
  namespace: suex-enginfprojects-test
  labels:
    app.kubernetes.io/name: enginfprojects
spec:
  selector:
    app.kubernetes.io/name: enginfprojects
  type: ClusterIP
  ports:
    - port: 5000
