Deployments/legacy/suex-enginfprojects-test/k8s-manifests/service-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: enginfprojects-redis-master
  namespace: suex-enginfprojects-test
  labels:
    app.kubernetes.io/name: enginfprojects-redis-master
spec:
  selector:
    app.kubernetes.io/name: enginfprojects-redis-master
  type: ClusterIP
  ports:
    - port: 6379
